# autonomous-retail-assistant

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  docker-compose.yml
_archived/: README.md
_archived/connectors/spring-boot/apify/: ApifyClient.java  ApifyConnector.java  TescoApifyConnector.java
_archived/connectors/spring-boot/apify-tests/: TescoApifyConnectorTest.java
_archived/docs-robotics/: robotics-extension.md  simulation-scope.md
_archived/robotics/docs/: simulation-flow.md
_archived/robotics/ros2_ws/src/retail_robot_interfaces/: CMakeLists.txt
_archived/robotics/ros2_ws/src/retail_robot_interfaces/msg/: HandoffRequest.msg  NavigationTask.msg
_archived/spring-boot-robotics-stub/domain/: package-info.java
_archived/spring-boot-robotics-stub/events/: package-info.java
_archived/spring-boot-robotics-stub/interfaces/: package-info.java
backend/: README.md
backend/ai-service/: README.md  requirements.txt
backend/ai-service/app/: main.py
backend/ai-service/app/api/: basket_router.py  budget_router.py  intent_router.py  ranking_router.py  scrapers_router.py  substitution_router.py
backend/ai-service/app/basket_generation/: __init__.py  generator.py
backend/ai-service/app/budget_insights/: __init__.py  insights.py
backend/ai-service/app/constraint_filtering/: filter.py
backend/ai-service/app/core/: anthropic_client.py
backend/ai-service/app/explainability/: explainer.py
backend/ai-service/app/intent_parsing/: __init__.py  parser.py
backend/ai-service/app/preference_modeling/: modeler.py
backend/ai-service/app/ranking/: ranker.py
backend/ai-service/app/ranking_strategies/: base_strategy.py  replenishment_ranker.py  similarity_ranker.py  strategy_selector.py  value_ranker.py
backend/ai-service/prompts/: basket_generate.txt  budget_insights.txt  intent_parse.txt
backend/ai-service/tests/: test_argos_connector.py  test_asos_connector.py  test_basket_generator.py  test_boots_connector.py  test_budget_insights.py  test_intent_parser.py  test_playwright_connector.py  test_sainsburys_connector.py  test_scrapers_router.py
backend/contracts/: README.md
backend/contracts/openapi/: spring-boot.yaml
backend/contracts/schemas/: discovery_request.json  discovery_response.json  normalized_product.json
backend/spring-boot/: README.md  pom.xml
docs/: README.md
docs/architecture/: system-overview.md
docs/decisions/: 0001-software-first.md  0002-spring-plus-python.md  0003-approval-first-purchases.md
docs/trust/: policy-rules.md  trust-model.md
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: dietary.ts  fashion.ts
frontend/src/types/: api.generated.ts  app.ts
robotics/: README.md
robotics/ros2_ws/src/retail_robot_bringup/: README.md  package.xml  setup.cfg  setup.py
robotics/ros2_ws/src/retail_robot_bringup/launch/: retail_robot.launch.py
robotics/ros2_ws/src/retail_robot_interfaces/: package.xml
robotics/ros2_ws/src/retail_robot_interfaces/action/: GuideCustomer.action
robotics/ros2_ws/src/retail_robot_interfaces/srv/: ShelfLookup.srv
robotics/ros2_ws/src/simulation_bridge/: package.xml  setup.cfg  setup.py
scenarios/: README.md  approval-required-purchase.md  guided-product-search.md  robot-guides-customer-to-aisle.md  unsafe-substitution-blocked.md
(+492 files in other folders)
