<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>retail_robot_bringup</name>
  <version>0.0.1</version>
  <description>retail_robot_bringup package for Aisleon retail robot</description>
  <maintainer email="maryam@aisleon.dev">Maryam Yousuf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>store_map_service</exec_depend>
  <exec_depend>navigation_service</exec_depend>
  <exec_depend>task_planner</exec_depend>
  <exec_depend>human_handoff_service</exec_depend>
  <exec_depend>simulation_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
