<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_bridge</name>
  <version>0.0.1</version>
  <description>simulation_bridge package for Aisleon retail robot</description>
  <maintainer email="maryam@aisleon.dev">Maryam Yousuf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>retail_robot_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
